# ClegineEditor

./: .gitignore  CMakeLists.txt  README.md
include/CECS/: Entity.hpp  README.md  Registry.hpp  UUID.hpp  main.cpp
include/GLAD/: glad.c  glad.h
include/spdlog/sinks/: wincolor_sink-inl.h
src/: EntryPoint.cpp  EntryPoint.hpp
src/CECS/: CECS.hpp  README.md  main.cpp
src/Core/: Application.cpp  Application.hpp  Assert.hpp  Common.hpp  Logger.cpp  Logger.hpp  Platform.hpp  Singleton.hpp  UUID.hpp
src/ImGUI/: ImGUIContext.cpp  ImGUIContext.hpp
src/Renderer/: Framebuffer.cpp  Framebuffer.hpp  GameObject2D.hpp  OrthoCamera.cpp  OrthoCamera.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/Scene/: Component.hpp  GameObject.hpp
